--- a/twitter-app/package.json
+++ b/twitter-app/package.json
@@ -11,11 +11,13 @@
   },
   "private": true,
   "dependencies": {
+    "@types/node-gcm": "^0.14.29",
     "body-parser": "^1.17.1",
     "compression": "^1.6.2",
     "core-js": "^2.4.1",
     "cors": "^2.8.3",
     "express": "^4.15.2",
+    "node-gcm": "^0.14.6",
     "pusher": "^1.5.1",
     "pusher-client": "^1.1.0",
     "request": "^2.81.0",
